[package]
name = "rusty_md"
version = "0.1.0"
authors = ["Kyunghoon HAN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-linalg = {version = "0.16.0", features = ["intel-mkl-static"]}
ndarray-rand = "0.14.0"
rand = "0.8.5"
regex = "1.9.1"
